--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-Python==3.12.11
 streamlit==1.32.2
 requests==2.31.0
 sentence-transformers==2.2.2
@@ -6,3 +5,6 @@ numpy==1.26.4
 scikit-learn==1.4.0
 python-dateutil==2.8.2
 concurrent-log-handler==0.9.24
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.0.1
+torchvision==0.15.2
